Added some css to the website

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
     <head>
         <title>Odin Recipes</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="recipes/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Hubballi&family=Inconsolata&family=Poppins:wght@100&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
-        <a href="recipes/clapshot.html">Clapshot</a>
-        <a href="recipes/vegetarian-haggis.html">Vegetarian Haggis</a>
+        <h1 class="title">Odin Recipes</h1>
+        <h2 id="title-links">Links to some nice recipes:</h2>
+        <a class="links" href="recipes/lasagna.html">Lasagna</a>
+        <a class="links" href="recipes/clapshot.html">Clapshot</a>
+        <a class="links" href="recipes/vegetarian-haggis.html">Vegetarian Haggis</a>
     </body>
 </html>
