--- a/recipes/vegetarian-haggis.html
+++ b/recipes/vegetarian-haggis.html
@@ -3,9 +3,11 @@
     <head>
         <title>Odin Recipes</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Vegetarian Haggis</h1>
+        <h1 class="title">Vegetarian Haggis</h1>
+        <a href="../index.html">Home</a><br>
         <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F777321.jpg&w=596&h=596&c=sc&poi=face&q=60">
         <h2>Description</h2>
         <p>'Fair fa' your honest, sonsie face, Great chieftain o' the puddin-race!' Here's a tasty vegetarian version of The Robbie Burns Night sausage, passed on to me by some friends from Cape Breton.</p>
