--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,9 +3,11 @@
     <head>
         <title>Odin Recipes</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Lasagna</h1>
+        <h1 class="title">Lasagna</h1>
+        <a href="../index.html">Home</a><br>
         <img src="https://img.buzzfeed.com/thumbnailer-prod-us-east-1/video-api/assets/150087.jpg?output-format=auto&output-quality=auto&resize=600:*">
         <h2>Description</h2>
         <p>This is the best lasagna we have ever had, including restaurants! Great with a salad and garlic bread.</p>
